updated api spec and added input parameter validations
