# server/models/inline_response200.py
@@ -13,7 +13,7 @@ class InlineResponse200(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, endotype_id: str=None, endotype_description: str=None, periods: List[EndotypesPeriod]=None):
+    def __init__(self, endotype_id: str=None, endotype_description: str=None, endotype_evidence: str=None, periods: List[EndotypesPeriod]=None):
         """
         InlineResponse200 - a model defined in Swagger
 
@@ -21,23 +21,28 @@ class InlineResponse200(Model):
         :type endotype_id: str
         :param endotype_description: The endotype_description of this InlineResponse200.
         :type endotype_description: str
+        :param endotype_evidence: The endotype_evidence of this InlineResponse200.
+        :type endotype_evidence: str
         :param periods: The periods of this InlineResponse200.
         :type periods: List[EndotypesPeriod]
         """
         self.swagger_types = {
             'endotype_id': str,
             'endotype_description': str,
+            'endotype_evidence': str,
             'periods': List[EndotypesPeriod]
         }
 
         self.attribute_map = {
             'endotype_id': 'endotype_id',
             'endotype_description': 'endotype_description',
+            'endotype_evidence': 'endotype_evidence',
             'periods': 'periods'
         }
 
         self._endotype_id = endotype_id
         self._endotype_description = endotype_description
+        self._endotype_evidence = endotype_evidence
         self._periods = periods
 
     @classmethod
@@ -93,6 +98,27 @@ class InlineResponse200(Model):
         """
 
         self._endotype_description = endotype_description
+
+    @property
+    def endotype_evidence(self) -> str:
+        """
+        Gets the endotype_evidence of this InlineResponse200.
+
+        :return: The endotype_evidence of this InlineResponse200.
+        :rtype: str
+        """
+        return self._endotype_evidence
+
+    @endotype_evidence.setter
+    def endotype_evidence(self, endotype_evidence: str):
+        """
+        Sets the endotype_evidence of this InlineResponse200.
+
+        :param endotype_evidence: The endotype_evidence of this InlineResponse200.
+        :type endotype_evidence: str
+        """
+
+        self._endotype_evidence = endotype_evidence
 
     @property
     def periods(self) -> List[EndotypesPeriod]:
