# server/models/visit.py
@@ -2,6 +2,7 @@
 
 from __future__ import absolute_import
 from models.exposure import Exposure
+import re
 from models.base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,41 +14,46 @@ class Visit(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, time: str=None, zip: str=None, visit_type: str=None, icd_code: str=None, exposure: Exposure=None):
+    def __init__(self, time: datetime=None, lat: float=None, lon: float=None, visit_type: str=None, icd_codes: str=None, exposure: Exposure=None):
         """
         Visit - a model defined in Swagger
 
         :param time: The time of this Visit.
-        :type time: str
-        :param zip: The zip of this Visit.
-        :type zip: str
+        :type time: datetime
+        :param lat: The lat of this Visit.
+        :type lat: float
+        :param lon: The lon of this Visit.
+        :type lon: float
         :param visit_type: The visit_type of this Visit.
         :type visit_type: str
-        :param icd_code: The icd_code of this Visit.
-        :type icd_code: str
+        :param icd_codes: The icd_codes of this Visit.
+        :type icd_codes: str
         :param exposure: The exposure of this Visit.
         :type exposure: Exposure
         """
         self.swagger_types = {
-            'time': str,
-            'zip': str,
+            'time': datetime,
+            'lat': float,
+            'lon': float,
             'visit_type': str,
-            'icd_code': str,
+            'icd_codes': str,
             'exposure': Exposure
         }
 
         self.attribute_map = {
             'time': 'time',
-            'zip': 'zip',
+            'lat': 'lat',
+            'lon': 'lon',
             'visit_type': 'visit_type',
-            'icd_code': 'icd_code',
+            'icd_codes': 'icd_codes',
             'exposure': 'exposure'
         }
 
         self._time = time
-        self._zip = zip
+        self._lat = lat
+        self._lon = lon
         self._visit_type = visit_type
-        self._icd_code = icd_code
+        self._icd_codes = icd_codes
         self._exposure = exposure
 
     @classmethod
@@ -63,46 +69,70 @@ class Visit(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def time(self) -> str:
+    def time(self) -> datetime:
         """
         Gets the time of this Visit.
 
         :return: The time of this Visit.
-        :rtype: str
+        :rtype: datetime
         """
         return self._time
 
     @time.setter
-    def time(self, time: str):
+    def time(self, time: datetime):
         """
         Sets the time of this Visit.
 
         :param time: The time of this Visit.
-        :type time: str
+        :type time: datetime
         """
 
         self._time = time
 
+
     @property
-    def zip(self) -> str:
-        """
-        Gets the zip of this Visit.
+    def lat(self) -> float:
+    """
+    Gets the lat of this Visit.
 
-        :return: The zip of this Visit.
-        :rtype: str
-        """
-        return self._zip
+    :return: The lat of this Visit.
+    :rtype: float
+    """
+    return self._lat
 
-    @zip.setter
-    def zip(self, zip: str):
-        """
-        Sets the zip of this Visit.
+    @lat.setter
+    def lat(self, lat: float):
+    """
+    Sets the lat of this Visit.
 
-        :param zip: The zip of this Visit.
-        :type zip: str
-        """
+    :param lat: The lat of this Visit.
+    :type lat: float
+    """
 
-        self._zip = zip
+    self._lat = lat
+
+
+    @property
+    def lon(self) -> float:
+    """
+    Gets the lon of this Visit.
+
+    :return: The lon of this Visit.
+    :rtype: float
+    """
+    return self._lon
+
+
+    @lon.setter
+    def lon(self, lon: float):
+    """
+    Sets the lon of this Visit.
+
+    :param lon: The lon of this Visit.
+    :type lon: float
+    """
+
+    self._lon = lon
 
     @property
     def visit_type(self) -> str:
@@ -122,28 +152,32 @@ class Visit(Model):
         :param visit_type: The visit_type of this Visit.
         :type visit_type: str
         """
+        if visit_type is not None and not re.search('^(INPATIENT|OUTPATIENT|EMERGENCY|inpatient|outpatient|emergency)$', visit_type):
+            raise ValueError("Invalid value for `visit_type`, must be following pattern or equal to `/^(INPATIENT|OUTPATIENT|EMERGENCY|inpatient|outpatient|emergency)$/`")
 
         self._visit_type = visit_type
 
     @property
-    def icd_code(self) -> str:
+    def icd_codes(self) -> str:
         """
-        Gets the icd_code of this Visit.
+        Gets the icd_codes of this Visit.
 
-        :return: The icd_code of this Visit.
+        :return: The icd_codes of this Visit.
         :rtype: str
         """
         return self._icd_code
 
     @icd_code.setter
-    def icd_code(self, icd_code: str):
+    def icd_codes(self, icd_codes: str):
         """
-        Sets the icd_code of this Visit.
+        Sets the icd_codes of this Visit.
 
-        :param icd_code: The icd_code of this Visit.
-        :type icd_code: str
+        :param icd_codes: The icd_codes of this Visit.
+        :type icd_codes: str
         """
-
+        # validate pass in icd_codes str has to be comma separated
+        if icd_codes is not None and not re.search('^[-\w\s]+(,[-\w\s]+)*', icd_codes):
+            raise ValueError("Invalid value for icd_codes, must be comma separated icd codes")
         self._icd_code = icd_code
 
     @property
